[package]
name = "cli"
# Face brick is the term used for brick that isn't needed just for the structure, but also for look, energy efficiency and value.
version = "0.1.0"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
edition = "2021"
description = "Command-Line Interface to the Main Flight Computer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive"] }
