[package]
name = "mfc_cli"
version = "0.1.0"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
edition = "2021"
description = "Command-Line Interface to the Main Flight Computer"

[dependencies]
# CLI features crates
clap = { version = "3.1.3", features = ["derive"] }
# flight software crates
mfc = {path = "../support_apps"}
control_apps = {path = "../control_apps"}
# ground support and testing crates
simulator = {path = "../simulator"}
