[package]
name = "control_apps"
version = "0.1.0"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_debug"] }
nalgebra = "0.24.1"
adskalman = "0.5.0"
pid_control = "0.7.2"
