[package]
name = "control_apps"
version = "0.1.0"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
log = { version = "0.4", features = ["release_max_level_debug"] }
pretty_env_logger = "0.4.0"
pid = "3.0.0"
toml = "0.5"
# nalgebra = "0.24.1"
# adskalman = "0.5.0"
