[package]
name = "flight_sim"
version = "0.1.0"
authors = ["Philip Linden <lindenphilipj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_debug"] }
pretty_env_logger = "0.4.0"
