[package]
name = "mfc"
version = "0.1.0"
authors = ["Austin Bodzas <austinbodzas@gmail.com>"]
edition = "2018"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
nng = "1.0.0"
rmp = "0.8.9"
rmp-serde = "1.0.0"
control_apps = {path = "../control_apps"}
simulator = {path = "../simulator"}

#tmp
serde_json = "1.0.57"

serde = {version = "^1.0", features = ["derive"]}
serde_derive = "^1.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"
